qt/multimedia/gen_qaudiooutput.h

class QAudioDeviceInfo;
class QAudioFormat;
class QAudioOutput;
class QIODevice;
class QMetaObject;
class QObject;
typedef struct QAudioDeviceInfo QAudioDeviceInfo;
typedef struct QAudioFormat QAudioFormat;
typedef struct QAudioOutput QAudioOutput;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QIODevice QIODevice;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
QAudioOutput* QAudioOutput_new();
QAudioOutput* QAudioOutput_new2(QAudioDeviceInfo* audioDeviceInfo);
QAudioOutput* QAudioOutput_new3(QAudioFormat* format);
QAudioOutput* QAudioOutput_new4(QAudioFormat* format, QObject* parent);
QAudioOutput* QAudioOutput_new5(QAudioDeviceInfo* audioDeviceInfo, QAudioFormat* format);
QAudioOutput* QAudioOutput_new6(QAudioDeviceInfo* audioDeviceInfo, QAudioFormat* format, QObject* parent);
QMetaObject* QAudioOutput_metaObject(const QAudioOutput* self);
void* QAudioOutput_metacast(QAudioOutput* self, const char* param1);
int QAudioOutput_metacall(QAudioOutput* self, int param1, int param2, void** param3);
struct miqt_string QAudioOutput_tr(const char* s);
struct miqt_string QAudioOutput_trUtf8(const char* s);
QAudioFormat* QAudioOutput_format(const QAudioOutput* self);
void QAudioOutput_start(QAudioOutput* self, QIODevice* device);
QIODevice* QAudioOutput_start2(QAudioOutput* self);
void QAudioOutput_stop(QAudioOutput* self);
void QAudioOutput_reset(QAudioOutput* self);
void QAudioOutput_suspend(QAudioOutput* self);
void QAudioOutput_resume(QAudioOutput* self);
void QAudioOutput_setBufferSize(QAudioOutput* self, int bytes);
int QAudioOutput_bufferSize(const QAudioOutput* self);
int QAudioOutput_bytesFree(const QAudioOutput* self);
int QAudioOutput_periodSize(const QAudioOutput* self);
void QAudioOutput_setNotifyInterval(QAudioOutput* self, int milliSeconds);
int QAudioOutput_notifyInterval(const QAudioOutput* self);
long long QAudioOutput_processedUSecs(const QAudioOutput* self);
long long QAudioOutput_elapsedUSecs(const QAudioOutput* self);
int QAudioOutput_error(const QAudioOutput* self);
int QAudioOutput_state(const QAudioOutput* self);
void QAudioOutput_setVolume(QAudioOutput* self, double volume);
double QAudioOutput_volume(const QAudioOutput* self);
struct miqt_string QAudioOutput_category(const QAudioOutput* self);
void QAudioOutput_setCategory(QAudioOutput* self, struct miqt_string category);
void QAudioOutput_stateChanged(QAudioOutput* self, int state);
void QAudioOutput_connect_stateChanged(QAudioOutput* self, intptr_t slot);
void QAudioOutput_notify(QAudioOutput* self);
void QAudioOutput_connect_notify(QAudioOutput* self, intptr_t slot);
struct miqt_string QAudioOutput_tr2(const char* s, const char* c);
struct miqt_string QAudioOutput_tr3(const char* s, const char* c, int n);
struct miqt_string QAudioOutput_trUtf82(const char* s, const char* c);
struct miqt_string QAudioOutput_trUtf83(const char* s, const char* c, int n);
bool QAudioOutput_override_virtual_metacall(void* self, intptr_t slot);
int QAudioOutput_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QAudioOutput_override_virtual_event(void* self, intptr_t slot);
bool QAudioOutput_virtualbase_event(void* self, QEvent* event);
bool QAudioOutput_override_virtual_eventFilter(void* self, intptr_t slot);
bool QAudioOutput_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QAudioOutput_override_virtual_timerEvent(void* self, intptr_t slot);
void QAudioOutput_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QAudioOutput_override_virtual_childEvent(void* self, intptr_t slot);
void QAudioOutput_virtualbase_childEvent(void* self, QChildEvent* event);
bool QAudioOutput_override_virtual_customEvent(void* self, intptr_t slot);
void QAudioOutput_virtualbase_customEvent(void* self, QEvent* event);
bool QAudioOutput_override_virtual_connectNotify(void* self, intptr_t slot);
void QAudioOutput_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QAudioOutput_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QAudioOutput_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QAudioOutput_delete(QAudioOutput* self);